# meta-ads-mcp

./: .dockerignore  .email-allowlist  .env.example  .gitignore  Dockerfile  README.md  STREAMABLE_HTTP_SETUP.md  docker-compose.yml  pyproject.toml  server.json  setup.py  smithery.yaml
.github/workflows/: publish.yml
examples/: README.md  example_http_client.py
meta_ads_mcp/: __init__.py  __main__.py
meta_ads_mcp/core/: __init__.py  accounts.py  ads.py  ads_library.py  adsets.py  api.py  auth.py  authentication.py  budget_schedules.py  callback_server.py  campaigns.py  http_auth_integration.py  insights.py  openai_deep_research.py  reports.py  resilience.py  resources.py  server.py  targeting.py  utils.py  write_gate.py
tests/: README.md  __init__.py  conftest.py  e2e_account_info_search_issue.py  test_account_info_access_fix.py  test_account_search.py  test_ad_formats_flexible.py  test_bid_strategy_validation.py  test_budget_update.py  test_budget_update_e2e.py  test_call_now_phone_number.py  test_campaign_objective_filter.py  test_cbo_budget_conflict.py  test_compute_image_crops.py  test_create_ad_creative_collapse_warning.py  test_create_ad_creative_simple.py  test_create_simple_creative_e2e.py  test_dsa_beneficiary.py  test_dsa_integration.py  test_dynamic_creatives.py  test_estimate_audience_size.py  test_estimate_audience_size_e2e.py  test_event_id_e2e.py  test_flex_creatives.py  test_frequency_control_specs_create.py  test_get_account_pages.py  test_get_ad_creatives_fix.py  test_get_ad_image_quality_improvements.py  test_get_ad_image_regression.py  test_get_ad_video.py  test_get_creative_details.py  test_http_transport.py  test_image_crops.py  test_insights_actions_and_values_e2e.py  test_insights_pagination.py  test_integration_openai_mcp.py  test_is_dynamic_creative_adset.py  test_mobile_app_adset_creation.py  test_mobile_app_adset_issue.py  test_multi_advertiser_ads.py  (+16 more)
